[package]
name = "mailchimp"
version = "0.1.15"
authors = ["Yolier Galan Tasse <gallegogt@gmail.com>"]
description = "[Unofficial] Library for the development of applications that require the use of the [Mailchimp](https://developer.mailchimp.com) API, using the Rust programming language"
readme = "README.md"
edition = "2018"
license-file = "LICENCE"
repository = "https://github.com/gallegogt/mailchimp-rs.git"
homepage = "https://github.com/gallegogt/mailchimp-rs"
keywords = ["mailchimp", "http", "email", "automation", "api"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
# could be `staticlib` as well
crate-type = ["rlib", "dylib", "staticlib"]
# A flag for enabling documentation tests for this target. This is only relevant
# for libraries, it has no effect on other sections. This is used by
# `cargo test`.
doctest = true
# # A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true

[dev-dependencies]
# This library is meant to be used on development or testing environments
# in which setting environment variables is not practical.
dotenv = "^0.14"
# Eclipse Paho MQTT Rust Client Library
paho-mqtt = {version="^0.5", default-features=false}
# MD5
md5 = "^0.6"

[dependencies]
# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde.
serde = { version = "^1.0", features=["derive"] }
# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
# HTTP Request Library
reqwest={version = "^0.10", features = ["blocking", "json"]}
# Log
log = "^0.4"
# Lazy Static
lazy_static = "^1.3"
